<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/string_nomor_telepon"
        android:inputType="number"
        android:textSize="12sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btn_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:onClick="DialPhone"
        android:text="@string/string_open_number"
        android:textSize="14sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/edt_web_url"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/string_masukkan_url"
        android:inputType="textUri"
        android:textSize="12sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btn_web_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/string_open_web"
        android:textSize="14sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/edt_lokasi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/string_buka_lokasi"
        android:inputType="textUri"
        android:textSize="12sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btn_lokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/string_open_location"
        android:textSize="14sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/edt_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/string_masukkan_text"
        android:inputType="textUri"
        android:textSize="12sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btn_share_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/string_share_text"
        android:textSize="14sp"
        android:textStyle="bold" />


</LinearLayout>